--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </style>
  
 	<script language="Javascript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqS4uxsBkU_44Iv8zCJWHcvtZVv6VvUuc"></script>
       
  
 	<script type="text/javascript">
